--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,11 @@
             <scope>runtime</scope>
         </dependency>
         
+        <dependency>
+   			<groupId>org.json</groupId>
+   			<artifactId>json</artifactId>
+   <version>20080701</version>
+</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
