Added Elastic Search Congfigurations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.username = postgres
 spring.datasource.password = root
 
 spring.jpa.hibernate.ddl-auto = create-drop
+
+spring.data.elasticsearch.cluster-name=elasticsearch
+spring.data.elasticsearch.cluster-nodes=elasticsearch
