--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,32 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		 
+		 <dependency>
+    		<groupId>org.elasticsearch</groupId>
+    		<artifactId>elasticsearch</artifactId>
+    		<version>6.2.4</version>
+  		</dependency>
+		
+		<dependency>
+    		<groupId>org.elasticsearch.client</groupId>
+    		<artifactId>elasticsearch-rest-high-level-client</artifactId>
+    		<version>6.2.4</version>
+	  	</dependency>
+		
+		<dependency>
+    		<groupId>org.elasticsearch.client</groupId>
+    		<artifactId>elasticsearch-rest-client-sniffer</artifactId>
+    		<version>6.2.4</version>
+  		</dependency>
+  		
+		<dependency>
+    		<groupId>org.elasticsearch.client</groupId>
+    		<artifactId>elasticsearch-rest-client</artifactId>
+    		<version>6.2.4</version>
+  		</dependency>
+		
+		
 
 		<!-- <dependency>
 			<groupId>mysql</groupId>
